[package]
name = "thousands"
version = "0.1.3-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Adds digit separators to numbers, configurably."
repository = "https://github.com/tov/thousands-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["numbers", "formatting", "separators", "commas"]
categories = ["value-formatting"]

[badges]
travis-ci = { repository = "tov/thousands-rs" }
